--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 
     <!--Footer-->
     <footer id="footer" class="footer white-bg">
-        <p>Site Criado por <a href="" rel="nofollow" target="_blank">&copy;Jefferson Barbosa</a></p>
+        <p>Site Criado por <a href="https://github.com/Jefferson-BR" rel="follow" target="_blank">&copy;Jefferson Barbosa</a></p>
     </footer>
     <!--Footer-->
 </body>
